actually update lang

--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -521,10 +521,10 @@ botanicaladdons.page.amp1=Don't whisper
 
 botanicaladdons.entry.crackle=Crackling Stars
 botanicaladdons.tagline.crackle=An unstable light source
-botanicaladdons.page.crackle0=The &1Crackling Star&0 is the form of the stars, trapped upon earth, and brought forth through &4Iridescence&0. They appear as a ball of light, but will distribute their mass to nearby &0Crackling Stars&0. They give off light with the same strength as &1Glowstone&0, and can be made in any of the colors of &4Iridescence&0.
+botanicaladdons.page.crackle0=The &1Crackling Star&0 is the form of the stars, trapped upon earth, and brought forth through &4Iridescence&0. They appear as a ball of light, but will distribute their mass to nearby &1Crackling Stars&0. They give off light with the same strength as &1Glowstone&0, and can be made in any of the colors of &4Iridescence&0.
 botanicaladdons.page.crackle1=Wire's frames
 
 botanicaladdons.entry.ironBelt=Weighted Belt
-botanicaladdons.tagline.ironBelt=An unstable light source
-botanicaladdons.page.ironBelt0=The &1Crackling Star&0 is the form of the stars, trapped upon earth, and brought forth through &4Iridescence&0. They appear as a ball of light, but will distribute their mass to nearby &0Crackling Stars&0. They give off light with the same strength as &1Glowstone&0, and can be made in any of the colors of &4Iridescence&0.
-botanicaladdons.page.ironBelt1=Wire's frames
+botanicaladdons.tagline.ironBelt=Prevents floating
+botanicaladdons.page.ironBelt0=While waterwalking is nice, sometimes a priest of &3Njord&0 needs to walk on the bottom of the ocean. While sneaking can work, it's sometimes nicer to just sink. The &1Weighted Belt&0 will drag you down in air, and prevent waterwalking.
+botanicaladdons.page.ironBelt1=Fancier cement shoes
