--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -59,6 +59,8 @@ item.botanicaladdons:ironBelt.name=Weighted Belt
 
 item.botanicaladdons:xpTome.name=Tome of the Ages
 
+item.botanicaladdons:corporeaFocus.name=Stone of Recall
+
 enchantment.botanicaladdons.light=Streamlined
 enchantment.botanicaladdons.light.desc=Quicker to swing, you move lithely while you hold it, at the cost of reduced damage.
 enchantment.botanicaladdons.heavy=Crushing
@@ -132,6 +134,11 @@ tile.botanicaladdons:calicoLog.name=Calico Log
 tile.botanicaladdons:calicoPlanks.name=Calico Planks
 tile.botanicaladdons:calicoLeaves.name=Calico Leaves
 tile.botanicaladdons:calicoSapling.name=Calico Sapling
+
+tile.botanicaladdons:corporeaResonator.name=Corporea Resonator
+tile.botanicaladdons:actuator.name=Ender Actuator
+
+misc.botanicaladdons.actuatorBind=The Actuator hums with the song of your soul...
 
 misc.botanicaladdons.color.-1=&cERROR&r
 misc.botanicaladdons.color.0=White
@@ -535,3 +542,14 @@ botanicaladdons.entry.xpTome=Tome of the Ages
 botanicaladdons.tagline.xpTome=Break down enchantments
 botanicaladdons.page.xpTome0=Enchantments rarely go exactly as planned, and using &1Spellbinding Cloth&0 doesn't give anything back. The &1Tome of the Ages&0 transfers one enchantment at a time into the ancient collective knowledge of the forests, and releases the experience of the enchantment, which can be retrieved with a simple use of the book. Sneak-using the book will steal your experience, allowing you to store it, if imperfectly.
 botanicaladdons.page.xpTome1=All hail the second Eaton
+
+botanicaladdons.entry.corporeaRecall=Remote Corporea
+botanicaladdons.tagline.corporeaRecall=Request items from a Corporea network remotely
+botanicaladdons.page.corporeaRecall0=The &1Corporea Resonator&0 and its counterpart, the &1Stone of Recall&0, allow for accessing a corporea network from far away. If you bind a &1Stone&0 to a &1Resonator&0 as if it was a &1Waystone&0, holding the Stone will allow you to trigger the &1Resonator&0 as if it was a &1Corporea Index&0, dropping the results as if it was a &1Corporea Funnel&0.
+botanicaladdons.page.corporeaRecall1=Let's Go! Soul Resonance!
+botanicaladdons.page.corporeaRecall2=I can't remember...
+
+botanicaladdons.entry.enderActuator=Ender Actuator
+botanicaladdons.tagline.enderActuator=Control your Ender Chest remotely
+botanicaladdons.page.enderActuator0=The &1Ender Actuator&0 is an interesting block, allowing resonance with your &4Ender Chest&0 from across the world. To activate one, click a disabled one and it will begin to shine. As long as you are in the same dimension as a bound &1Actuator&0, it will act as an interface for your &4Ender Chest&0 for machines to use.
+botanicaladdons.page.enderActuator1=Not a tessaract
