--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -138,7 +138,7 @@ tile.botanicaladdons:calicoSapling.name=Calico Sapling
 tile.botanicaladdons:corporeaResonator.name=Corporea Resonator
 tile.botanicaladdons:actuator.name=Ender Actuator
 
-misc.botanicaladdons.actuatorBind=The Actuator hums with the song of your soul...
+misc.botanicaladdons.actuatorBind=The Actuator screams with the song of your soul...
 
 misc.botanicaladdons.color.-1=&cERROR&r
 misc.botanicaladdons.color.0=White
