a thing for tris

--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -565,7 +565,7 @@ botanicaladdons.page.amp1=Don't whisper
 
 botanicaladdons.entry.crackle=Crackling Stars
 botanicaladdons.tagline.crackle=An unstable light source
-botanicaladdons.page.crackle0=The &1Crackling Star&0 is the form of the stars, trapped upon earth, and brought forth through &4Iridescence&0. They appear as a ball of light, but will distribute their mass to nearby &1Crackling Stars&0. They give off light with the same strength as &1Glowstone&0, and can be made in any of the colors of &4Iridescence&0.
+botanicaladdons.page.crackle0=The &1Crackling Star&0 is the form of the stars, trapped upon earth, and brought forth through &4Iridescence&0. They appear as a ball of light, but will distribute their mass to a &1Crackling Star&0 it's bound to with a &1Wand of the Forest&0. They give off light with the same strength as &1Glowstone&0, and can be made in any of the colors of &4Iridescence&0.
 botanicaladdons.page.crackle1=Wire's frames
 
 botanicaladdons.entry.ironBelt=Weighted Belt
